# sem3.1

./: CMakeLists.txt  README.md  inp.cpp  inp.h  line.cpp  line.h  main.cpp  matrix.cpp  matrix.h  menu.cpp  menu.h
